<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/crema"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:context="com.thedeveloperworldisyours.whatdoyoudoandroid.activities.QuestionActivity">

        <com.thedeveloperworldisyours.whatdoyoudoandroid.view.CustomTextView
            android:id="@+id/activity_question_step"
            style="@style/TextNormalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/activity_question_condition" />


        <LinearLayout
            android:id="@+id/activity_question_linear_layout_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <com.thedeveloperworldisyours.whatdoyoudoandroid.view.CustomTextView
                android:id="@+id/activity_question_what_do_you_do"
                style="@style/TitleAppStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_question_condition" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.thedeveloperworldisyours.whatdoyoudoandroid.view.CustomButton
                    android:id="@+id/activity_question_a_button"
                    style="@style/SmallButtonStyle"
                    android:layout_alignParentTop="@+id/activity_question_answer_a"
                    android:text="@string/activity_question_a" />

                <com.thedeveloperworldisyours.whatdoyoudoandroid.view.CustomTextView
                    android:id="@+id/activity_question_answer_a"
                    style="@style/TextNormalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/activity_question_a_button"
                    android:text="activity_question_answer_a" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.thedeveloperworldisyours.whatdoyoudoandroid.view.CustomButton
                    android:id="@+id/activity_question_b_button"
                    style="@style/SmallButtonStyle"
                    android:layout_alignParentTop="@+id/activity_question_answer_b"
                    android:text="@string/activity_question_b" />

                <com.thedeveloperworldisyours.whatdoyoudoandroid.view.CustomTextView
                    android:id="@+id/activity_question_answer_b"
                    style="@style/TextNormalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/activity_question_b_button"
                    android:text="activity_question_answer_b" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>